# AoC2025

./: .gitignore  README.md  pyproject.toml
scripts/day1/: day1.py
scripts/day2/: day2.py
scripts/day3/: day3.py
scripts/day4/: day4.py
scripts/day5/: day5.py
scripts/day7/: day7.py
scripts/day8/: day8.py
scripts/day9/: day9.py
scripts/utils/: day_template.py  support.py
